WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206268
REGRESSION (
r253394
): After swiping back during a navigation, WKWebView gets stuck with the forward content, stops repainting
https://bugs.webkit.org/show_bug.cgi?id=206268
Summary
REGRESSION (r253394): After swiping back during a navigation, WKWebView gets ...
Tim Horton
Reported
2020-01-14 17:03:37 PST
REGRESSION (
r253394
): After swiping back during a navigation, WKWebView gets stuck with the forward content, stops repainting
Attachments
Patch
(7.56 KB, patch)
2020-01-14 17:12 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-01-14 17:12:46 PST
Created
attachment 387736
[details]
Patch
Tim Horton
Comment 2
2020-01-14 17:12:54 PST
<
rdar://problem/58536702
>
Simon Fraser (smfr)
Comment 3
2020-01-14 17:39:02 PST
Comment on
attachment 387736
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=387736&action=review
> Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:262 > m_didCallWillEndSwipeGesture = false; > + m_didCallEndSwipeGesture = false; > + m_removeSnapshotImmediatelyWhenGestureEnds = false;
Starting to feel like a state machine.
Tim Horton
Comment 4
2020-01-14 17:41:10 PST
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 387736
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=387736&action=review
> > > Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:262 > > m_didCallWillEndSwipeGesture = false; > > + m_didCallEndSwipeGesture = false; > > + m_removeSnapshotImmediatelyWhenGestureEnds = false; > > Starting to feel like a state machine.
STARTING!?
WebKit Commit Bot
Comment 5
2020-01-14 18:03:41 PST
Comment on
attachment 387736
[details]
Patch Clearing flags on attachment: 387736 Committed
r254552
: <
https://trac.webkit.org/changeset/254552
>
WebKit Commit Bot
Comment 6
2020-01-14 18:03:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug