Cherry-pick r254552. rdar://problem/58812968

REGRESSION (r253394): After swiping back during a navigation, WKWebView gets stuck with the forward content, stops repainting
    https://bugs.webkit.org/show_bug.cgi?id=206268
    <rdar://problem/58536702>

    Reviewed by Simon Fraser.

    * UIProcess/ViewGestureController.cpp:
    (WebKit::ViewGestureController::endSwipeGesture):
    * UIProcess/ViewGestureController.h:
    * UIProcess/ios/ViewGestureControllerIOS.mm:
    (WebKit::ViewGestureController::beginSwipeGesture):
    (WebKit::ViewGestureController::endSwipeGesture):
    (WebKit::ViewGestureController::removeSwipeSnapshot):
    * UIProcess/mac/ViewGestureControllerMac.mm:
    (WebKit::ViewGestureController::beginSwipeGesture):
    (WebKit::ViewGestureController::removeSwipeSnapshot):
    After r253394, we start loading the destination page in willEndSwipeGesture,
    when we know the gesture will complete, instead of in endSwipeGesture,
    when it is actually done.

    This means that if we decide that we should tear down the snapshot immediately,
    this can now happen in the window between willEndSwipeGesture and endSwipeGesture.

    However, removeSwipeSnapshot has numerous dependencies on endSwipeGesture
    (especially on iOS, where there are /also/ dependencies in the other direction -
    endSwipeGesture will never be called after removeSwipeSnapshot because
    of the gestureID mismatch).

    Regardless, it does not make sense to remove the snapshot while the animation
    is still running. So, if something causes removeSwipeSnapshot to be called
    before endSwipeGesture, we just set a bit and call it inside endSwipeGesture instead.

    This ends up putting the snapshot removal ordering back as it was before r253394.

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254552 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255013 268f45cc-cd09-0410-ab3c-d52691b4dbfc