Source/WebKit/UIProcess/ViewGestureController.h
@@ -435,6 +435,9 @@ private:
     bool m_isConnectedToProcess { false };
     bool m_didStartProvisionalLoad { false };
 
+    bool m_didCallEndSwipeGesture { false };
+    bool m_removeSnapshotImmediatelyWhenGestureEnds { false };
+
     SnapshotRemovalTracker m_snapshotRemovalTracker;
     WTF::Function<void()> m_loadCallback;
 };
